// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellDatetime should render date formatted 1`] = `
<div
  className="cell-datetime-container theme-cell-datetime-container"
>
  2016-09-22 00:00:00
</div>
`;

exports[`CellDatetime should render with "ago" 1`] = `
<div
  className="cell-datetime-container theme-cell-datetime-container"
>
  over 1 year ago
</div>
`;
